--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.room:room-ktx:2.5.1'
